force-app/main/default/objects/Patient_Medication__c/Patient_Medication__c.object-meta.xml
<CustomObject>
    <label>Patient Medication</label>
    <nameField>
        <label>Patient Medication Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Patient Medications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>