force-app/main/default/objects/Patient_Medication__c/fields/Donage__c.field-meta.xml
<CustomField>
    <fullName>Donage__c</fullName>
    <label>Dosage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>