force-app/main/default/objects/Patient_Medication__c/fields/Script__c.field-meta.xml
<CustomField>
    <fullName>Script__c</fullName>
    <label>Script</label>
    <referenceTo>Scripts__c</referenceTo>
    <relationshipLabel>Patient Medications</relationshipLabel>
    <relationshipName>Patient_Medications</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>