force-app/main/default/objects/Patient_Medication__c/fields/Units__c.field-meta.xml
<CustomField>
    <fullName>Units__c</fullName>
    <label>Units</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Medication_Units</valueSetName>
    </valueSet>
</CustomField>